--- a/T1/lecturaJson/pom.xml
+++ b/T1/lecturaJson/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>json</artifactId>
             <version>20240303</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
 </project>
