--- a/T5/GestorLigas/pom.xml
+++ b/T5/GestorLigas/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.example.gestorligas/org.example.gestorligas.HelloApplication</mainClass>
+                            <mainClass>org.example.gestorligas/org.example.gestorligas.LigasApp</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
