--- a/CURSO 2526/T3_4/PeticionesAPP/pom.xml
+++ b/CURSO 2526/T3_4/PeticionesAPP/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>9.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.42</version>
+        </dependency>
     </dependencies>
 
 </project>
