--- a/CURSO 2526/T3_4/PeticionesAPP/src/main/resources/database.properties
+++ b/CURSO 2526/T3_4/PeticionesAPP/src/main/resources/database.properties
@@ -1,3 +1,3 @@
-user="root";
-pass="root";
-url="jdbc:mysql://127.0.0.1:41063/peticiones";
+url=jdbc:mysql://localhost:3306/peticiones
+user=root
+pass=root
