--- a/CURSO 2526/T12/tienda/src/main/resources/application.properties
+++ b/CURSO 2526/T12/tienda/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.username = root
 spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
+spring.data.rest.base-path=
 
