--- a/CURSO 2526/T12/tienda/src/main/resources/application.properties
+++ b/CURSO 2526/T12/tienda/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
 spring.data.rest.base-path=
-
+spring.web.cors.allow-credentials = false
